@@ -2,6 +2,7 @@ python-apt (0.8.4) UNRELEASED; urgency=low
 
   * doc/examples/build-deps.py:
     - update the build-deps.py example to use the apt API more
+  * add support for apt_pkg.Policy.get_priority(PkgFileIterator)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Jan 2012 12:07:48 +0100
 
